bugfix/EPMRPP-38750: fix - React: Statuses of retried elements are overlapped on step view

--- a/app/src/pages/inside/stepPage/retries/retriesList/retry/retry.scss
+++ b/app/src/pages/inside/stepPage/retries/retriesList/retry/retry.scss
@@ -61,7 +61,7 @@
 }
 
 .status {
-  width: 60px;
+  width: 85px;
   color: $COLOR--charcoal-grey;
   font-family: $FONT-SEMIBOLD;
   font-size: 13px;
